Adding sim symbol

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card">
         <div class="iconos">
             <p>
-                <span class="sim"></span>
+                <div class="sim"><div/>
                 <span class="wifi"></span>
             </p>
         </div>
