--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 <body>
   
     <div class="card">
-        <div class="iconos">
-            <p>
-                <div class="sim"><div/>
-                <span class="wifi"></span>
-            </p>
+        <div class="icons">
+            <div class="sim"></div>
+            <span class="wifi"><span/>
         </div>
         <div class="number">
             <h1>4444 1111 2222 3333</h1>
