--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>12/20</h2>
         </div>
         <div class="data">
-            <h2>Curso</h2>
+            <h2>Curso de Clonacion</h2>
             <img src="./assets/img/visa.svg" alt="logo">
         </div>
     </div>
