Adding formatting to source code

--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS3</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/fontfaces.css">
-</head>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/fontfaces.css" />
+  </head>
 
-<body>
-  
+  <body>
     <div class="card">
-        <span class="logo">BBVA</span>
-        <div class="icons">
-            <div class="sim"></div>
-        </div>
-        <div class="number">
-            <h1>4444 1111 2222 3333</h1>
-            <p>4126</p>
-        </div>
-        <div class="valid">
-            <p>valid <br> thru</p>
-            <h2>12/20</h2>
-        </div>
-        <div class="data">
-            <h2>Curso de Clonacion</h2>
-            <img src="./assets/img/visa.svg" alt="logo">
-        </div>
+      <span class="logo">BBVA</span>
+      <div class="icons">
+        <div class="sim"></div>
+      </div>
+      <div class="number">
+        <h1>4444 1111 2222 3333</h1>
+        <p>4126</p>
+      </div>
+      <div class="valid">
+        <p>
+          valid <br />
+          thru
+        </p>
+        <h2>12/20</h2>
+      </div>
+      <div class="data">
+        <h2>Curso de Clonacion</h2>
+        <img src="./assets/img/visa.svg" alt="logo" />
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
